# openlan

./: .gitignore  .gitmodules  CNAME  Makefile  README.cn.md  README.en.md  README.md  VERSION  cert.pem  go.mod  go.sum
.github/workflows/: codecov.yml  codeql.yml  ubuntu.yml
3rd/: README.md  auto.sh
cmd/: main.go
cmd/access/: main.go  main_linux.go
cmd/api/: app.go  out.go  utils.go
cmd/ceci/: main.go
cmd/openudp/: main.go
cmd/point_darwin/: main.go
cmd/point_linux/: main.go
cmd/point_windows/: main.go  main.manifest  main.syso
cmd/proxy/: main.go
cmd/switch/: main.go  main_linux.go
core/: CMakeLists.txt  auto.sh  version.h
core/idlc/: confd-idl.ann  confd.ovsschema
core/tcp/: README.md  control.c  control.h  main.c  message.c  message.h  socket.c  socket.h  tuntap.c  tuntap.h  types.h
core/udp/: main.c  udp.c  udp.h
docker/: docker-compose.full.yml  docker-compose.yml  kubernetes.yml  openlan-confd.docker  openlan-switch.docker  openlan.centos  openlan.debian
docs/: README.md  central.md  dashboard.md  docker.md  ecmp.md  fabric.md  install.md  ipsec.md  multiarea.md  openlan-vs-wireguard.md  plan-openlanDeploymentGuide.prompt.md  proxy.md  ztrust.md
tests/: _access_admin_multi_login.sh  _access_fail.sh  _access_openvpn.sh  _access_openvpn_client_ping.sh  _access_openvpn_snat_vip.sh  _access_same_user_mutex.sh  _access_snat_scope_matrix.sh  _access_success.sh  _openvpn.sh  _switch_tcp.sh  _switch_three_node.sh  _switch_udp.sh  access.sh  access.ut  macro.sh  macro.ut  run.sh  start.sh  switch.sh  switch.ut  switch_tcp.sh
(+436 files in other folders)
